--- a/portfolio.html
+++ b/portfolio.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>solemansay's portfolio</title>
 </head>
-<body>
-    <p>
-        hello. hire me.
-    </p>
-</body>
+    <body>
+        <h1>Soleman Sayeeds portfolio</h1>
+        <p>
+         hello. hire me. :)
+        </p>
+    </body>
 </html>
